Fix mobile menu visibility

--- a/css/default.css
+++ b/css/default.css
@@ -61,8 +61,9 @@ nav {
 }
 
 #mobile-menu {
+    visibility: visible;
     opacity: 1;
-    transition:visibility 0s linear 0.5s,opacity 0.5s linear;
+    transition:visibility 0s,opacity 0.5s linear;
     background-color: #aaaaaa;
     list-style: none;
     line-height: 1em;
@@ -72,7 +73,9 @@ nav {
     padding: 5px 15px;
 }
 #mobile-menu.hidden-menu {
+    visibility: hidden;
     opacity: 0;
+    transition:visibility 0s linear 0.5s,opacity 0.5s linear;
 }
 
 #mobile-menu li {
@@ -88,6 +91,9 @@ div.social {
 .social a {
     color: #fff;
     text-decoration: none;
+}
+.social a:visited {
+    color: #fff;
 }
 
 .social-twitter {
